# vcpkg_sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
src/: CMakeLists.txt  sample.cpp
